<?xml version="1.0"?>
<package>
  <name>qt_planner</name>
  <version>0.1.0</version>
  <description>

     qt_planner

  </description>
  <maintainer email="jacobmoroniolson@gmail.com">Jacob Olson</maintainer>
  <author>Jacob Olson</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt5-dev</build_depend>
  <build_depend>rosflight_msgs</build_depend>
  <run_depend>rosflight_msgs</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt5-dev</run_depend>

 
</package>
